TpConnection: don't crash if a broken CM has no Groups property

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=54500